# Proyecto-de-Software

./: .gitignore  README.md
admin/: .env.example  .flake8  Makefile  README.md  app.py  mapa.html  pyproject.toml
admin/docker/: .env.example  docker-compose.yaml
admin/docker/initdb/: 01_postgis.sql
admin/docker/tailwind/: Dockerfile  input.css  package.json  tailwind.config.js
admin/src/core/: audit.py  database.py  db.py  seeds.py  storage.py
admin/src/core/models/: Ejemplo Psycopg2.py  Ejemplo SQLAlchemy.py  __init__.py  category.py  category_site.py  city.py  conservation_state.py  event_type.py  feature_flag.py  historic_site.py  issue.py  label.py  permission.py  province.py  review.py  role.py  site_history.py  site_image.py  tag.py  user.py
admin/src/core/models/issue/: __init__.py  issue.py
admin/src/core/services/: __init__.py  category_service.py  category_site_service.py  city_service.py  conservation_state_service.py  event_type_service.py  feature_flag_service.py  historic_site_service.py  issue_service.py  label_service.py  permission_service.py  province_service.py  review_service.py  role_service.py  site_history_service.py  site_image_service.py  tag_service.py  user_service.py
admin/src/core/utils/: auth.py  export.py  pagination.py  search.py
admin/src/web/: __init__.py  config.py
admin/src/web/api/: __init__.py  ping.py
admin/src/web/controllers/: __init__.py  auth.py  main.py
admin/src/web/controllers/api/: __init__.py  auth_api.py  city_api.py  favorites_api.py  feature_flag_api.py  me_api.py  province_api.py  reviews_api.py  sites_api.py  tags_api.py
admin/src/web/controllers/auth/: auth.py
admin/src/web/controllers/city/: city.py
admin/src/web/controllers/feature_flag/: feature_flag.py
admin/src/web/controllers/historic_site/: historic_site.py
admin/src/web/controllers/review/: review.py
admin/src/web/controllers/site_history/: site_history.py
admin/src/web/controllers/tag/: tag.py
admin/src/web/controllers/user/: user.py  user_management.py
admin/src/web/forms/auth/: __init__.py  auth_form.py
admin/src/web/forms/feature_flag/: __init__.py  feature_flag_form.py
admin/src/web/forms/historic_site/: __init__.py  create_site_form.py  edit_site_form.py  site_image_form.py
admin/src/web/forms/tag/: __init__.py  create_tag_form.py  delete_tag_form.py  edit_tag_form.py
admin/src/web/forms/user/: __init__.py  assign_role_form.py  block_user_form.py  (+5 more)
admin/src/web/handlers/: error.py
admin/src/web/schemas/: __init__.py  favorites_schemas.py  reviews_schemas.py  sites_schemas.py
admin/src/web/templates/: auth_layout.html  error.html  home.html  layout.html  maintenance.html
admin/src/web/utils/: auth.py  format_marshmallow_validation_errors.py  hooks.py
admin/static/css/: styles.css
admin/static/img/favicon/: site.webmanifest
admin/static/maps/: map_iframe.html
admin/tests/: conftest.py  search_test.py  test_user_service.py
(+94 files in other folders)
